--- a/src/app/episodes/add-episodes/add-episodes.component.html
+++ b/src/app/episodes/add-episodes/add-episodes.component.html
@@ -45,6 +45,8 @@
           placeholder="Enter your Instagram link"
         />
       </mat-form-field>
+
+      <button mat-raised-button (click)="onAddEpisodes()">submit</button>
     </div>
   </form>
 </div>
