--- a/src/app/episodes/add-episodes/add-episodes.component.html
+++ b/src/app/episodes/add-episodes/add-episodes.component.html
@@ -45,7 +45,15 @@
           placeholder="Enter your Instagram link"
         />
       </mat-form-field>
-
+      <mat-form-field color="accent" appearance="fill">
+        <mat-label>Pick your Episode date</mat-label>
+        <input formControlName="date" matInput [matDatepicker]="picker1" />
+        <mat-datepicker-toggle
+          matSuffix
+          [for]="picker1"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
       <button mat-raised-button (click)="onAddEpisodes()">submit</button>
     </div>
   </form>
