--- a/src/app/episodes/episodes.component.html
+++ b/src/app/episodes/episodes.component.html
@@ -1,5 +1,3 @@
-<p>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis at
-  laboriosam, recusandae facere eligendi rerum enim soluta! Quis dolor provident
-  quo dolore rem voluptates optio laudantium ipsum? Alias, perspiciatis omnis.
-</p>
+<div class="main">
+  <mat-card> </mat-card>
+</div>
