--- a/src/app/episodes/add-episodes/add-episodes.component.scss
+++ b/src/app/episodes/add-episodes/add-episodes.component.scss
@@ -1,5 +1,7 @@
 .form {
-  background-color: rgb(123, 123, 255);
+  background-image: url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\emilio-garcia-AWdCgDDedH0-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
 }
 
