--- a/src/app/episodes/load-episodes/load-episodes.component.scss
+++ b/src/app/episodes/load-episodes/load-episodes.component.scss
@@ -4,7 +4,7 @@
   // background-repeat: no-repeat;
 
   // background-size: cover;
-  background-color: blue;
+  background-color: rgb(132, 132, 255);
   min-height: 100vh;
 
   &-card {
