--- a/src/app/episodes/add-episodes/add-episodes.component.html
+++ b/src/app/episodes/add-episodes/add-episodes.component.html
@@ -60,6 +60,7 @@
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
         <button
+          fxFlexAlign="center"
           class="submit-button"
           mat-raised-button
           (click)="onAddEpisodes()"
