--- a/src/app/episodes/load-episodes/load-episodes.component.html
+++ b/src/app/episodes/load-episodes/load-episodes.component.html
@@ -39,7 +39,7 @@
         frameborder="0"
       ></iframe>
 
-      <div>{{ episode.guests }}</div>
+      <div>Guests:&nbsp;{{ episode.guests }}</div>
       <a href="{{ episode.soundCloud }}">Listen on Sound cloud</a>
       <!-- <iframe
         width="320"
