--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,20 @@
-<div class="main">
-  <div></div>
+<div class="main" fxLayout="row">
+  <div fxLayoutAlign="center center" fxLayout="column" fxFlex>
+    <div class="main-bg-video">
+      <video autoplay muted loop class="main-bg-video__content">
+        <source src="../../assets/Warming-up.mp4" type="video/mp4" />
+        Your browser isn't supported!
+      </video>
+    </div>
+    <h1 class="mat-display-3" fxLayoutAlign="center center">
+      it's good to have goals
+    </h1>
+    <div class="main-btn-position" fxLayoutAlign="start center">
+      <a
+        href="https://www.instagram.com/soccer_podcast/channel/?hl=en"
+        class="main-btn main-btn-white"
+        >follow us &rarr;</a
+      >
+    </div>
+  </div>
 </div>
