--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -1,4 +1,72 @@
 .main {
-  background-color: rgb(209, 148, 148);
   min-height: 100vh;
+  position: relative;
+
+  &-bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: -1;
+
+    &__content {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &-btn:link,
+  &-btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 100px 5px 100px 5px;
+    transition: all 0.9s;
+    letter-spacing: 0.8rem;
+    position: relative;
+  }
+
+  &-btn:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+
+  &-btn:active {
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  }
+
+  &-btn-white {
+    background-color: rgba(26, 202, 79, 0.623);
+    color: white;
+  }
+
+  &-btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px 5px 100px 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+
+  &-btn-white::after {
+    background-color: rgba(26, 202, 79, 0.623);
+  }
+
+  &-btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+  }
+
+  &-btn {
+    font-size: 1.5rem;
+    font-weight: 200;
+  }
 }
