--- a/src/app/episodes/episode-content/episode-content.component.scss
+++ b/src/app/episodes/episode-content/episode-content.component.scss
@@ -1,6 +1,5 @@
 .main2 {
-  background-image: linear-gradient(to right, gray, black),
-    url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\omar-flores-lQT_bOWtysE-unsplash.jpg);
+  background-image: url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\omar-flores-lQT_bOWtysE-unsplash.jpg);
   background-repeat: no-repeat;
 
   background-size: cover;
