--- a/src/app/episodes/add-episodes/add-episodes.component.html
+++ b/src/app/episodes/add-episodes/add-episodes.component.html
@@ -64,6 +64,7 @@
           class="submit-button"
           mat-raised-button
           (click)="onAddEpisodes()"
+          [routerLink]="['/episodes/loadepisodes']"
         >
           submit
         </button>
