adding profile component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,7 @@
             </a>
           </li>
 
-          <li lass="nav-list__item" *ngIf="auth.loggedIn">
+          <li class="nav-list__item" *ngIf="auth.loggedIn">
             <a
               class="auth"
               (click)="auth.logout()"
