--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,7 +38,7 @@ mat-sidenav-content {
 }
 
 .active {
-  text-decoration: underline white !important;
+  border-bottom: 1px white solid;
 }
 
 .matlist {
