--- a/src/app/episodes/episode-content/episode-content.component.html
+++ b/src/app/episodes/episode-content/episode-content.component.html
@@ -5,7 +5,9 @@
   fxLayoutGap="1rem"
 >
   <mat-card-header fxLayoutAlign="center center">
-    <mat-card-title>{{ episode.topic }}</mat-card-title>
+    <mat-card-title
+      ><h1>{{ episode.topic }}</h1></mat-card-title
+    >
     <mat-card-subtitle>{{ episode.name }}</mat-card-subtitle>
   </mat-card-header>
   <!-- <img
