--- a/src/app/episodes/load-episodes/load-episodes.component.scss
+++ b/src/app/episodes/load-episodes/load-episodes.component.scss
@@ -1,6 +1,10 @@
 .main2 {
-  background-image: linear-gradient(to right, gray, black),
-    url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\omar-flores-lQT_bOWtysE-unsplash.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(128, 128, 128, 0),
+      rgba(0, 0, 0, 0)
+    ),
+    url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\OG22VV0.jpg);
   background-repeat: no-repeat;
 
   background-size: cover;
