--- a/src/app/episodes/episode-content/episode-content.component.scss
+++ b/src/app/episodes/episode-content/episode-content.component.scss
@@ -7,6 +7,9 @@
   min-height: 100vh;
 
   &-card {
+    &__res {
+      width: 35rem;
+    }
     width: 60rem;
     min-height: 40rem;
     margin-top: 10rem;
