ngif delete button and add episode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,16 +72,22 @@
               >Home<mat-icon class="nav-list__item-icon">home</mat-icon></a
             >
           </li>
-          <li class="nav-list__item">
-            <a
-              routerLink="episodes/addepisodes"
-              routerLinkActive="active"
-              fxLayoutAlign="center center"
-              >Add Episode<mat-icon class="nav-list__item-icon"
-                >queue</mat-icon
-              ></a
+          <ng-container *ngIf="auth.userProfile$ | async as profile">
+            <li
+              class="nav-list__item"
+              *ngIf="profile.email == 'sorosh.bayanati@gmail.com'"
             >
-          </li>
+              <a
+                routerLink="episodes/addepisodes"
+                routerLinkActive="active"
+                fxLayoutAlign="center center"
+                >Add Episode<mat-icon class="nav-list__item-icon"
+                  >queue</mat-icon
+                ></a
+              >
+            </li>
+          </ng-container>
+
           <li class="nav-list__item">
             <a
               routerLink="episodes/loadepisodes"
@@ -113,7 +119,7 @@
           </li> -->
         </ul>
       </div>
-      <app-profile fxHide.lt-md></app-profile>
+      <app-profile></app-profile>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
