--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <pre
-  fxLayoutAlign="start center"
+  fxLayoutAlign="end center"
   *ngIf="auth.userProfile$ | async as profile"
   fxLayout="row"
   fxLayoutGap="2rem"
