--- a/src/app/episodes/load-episodes/load-episodes.component.scss
+++ b/src/app/episodes/load-episodes/load-episodes.component.scss
@@ -4,7 +4,7 @@
       rgba(128, 128, 128, 0),
       rgba(0, 0, 0, 0)
     ),
-    url(C:\Users\User\Desktop\podcasts\soccerPodcast\src\assets\OAB1XO0.jpg);
+    url(../../../assets/OAB1XO0.jpg);
   background-repeat: no-repeat;
 
   background-size: cover;
